[workspace]
members = ["contracts/*"]
default-members = [
  "contracts/lst_staking_hub",
  "contracts/lst_reward_dispatcher",
  "contracts/lst_validators_registry",
  "contracts/lst_token",
]

resolver = "2"

[workspace.package]
authors = ["Satlayer"]
repository = "https://github.com/satlayer/satlayer-lst"
version = "0.0.1"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "2.2.0"
cosmwasm-std = { version = "2.2.0", features = ["cosmwasm_2_0"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
cw-multi-test = "2.0.0"
cw20-base = "2.0.0"
cw20 = "2.0.0"
cosmos-sdk-proto = { version = "0.27.0", default-features = false, features = [
  "cosmwasm",
] }
prost = {version = "0.13.5", default-features = false }
