[workspace]
members = ["contracts/*", "packages/*"]

resolver = "2"

[workspace.package]
authors = ["SatLayer"]
edition = "2021"
license = "BSL-1.1"
repository = "https://github.com/satlayer/baby-lst"
version = "1.0.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[workspace.dependencies]
cosmwasm-schema = "2.2.0"
cosmwasm-std = { version = "2.2.0", features = ["cosmwasm_2_0"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
cw-multi-test = "2.0.0"
cw20-base = "2.0.0"
cw20 = "2.0.0"
cosmos-sdk-proto = { version = "0.27.0", default-features = false, features = [
  "cosmwasm",
] }
prost = { version = "0.13.5", default-features = false }
bech32 = "0.11"
serde_json = "1.0.140"

lst_token = { path = "./contracts/lst_token", features = ["library"] }
lst_staking_hub = { path = "./contracts/lst_staking_hub", features = ["library"] }
lst_validators_registry = { path = "./contracts/lst_validators_registry", features = ["library"] }
lst_reward_dispatcher = { path = "./contracts/lst_reward_dispatcher", features = ["library"] }
