[package]
name = "lst_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
thiserror.workspace = true
schemars.workspace = true
serde.workspace = true
cw20.workspace = true
prost = { version = "0.13", default-features = false, features = [
  "prost-derive",
] }
cosmos-sdk-proto = { version = "0.27", default-features = false, features = [
  "cosmwasm",
] }
