[package]
name = "lst_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
thiserror.workspace = true
schemars.workspace = true
serde.workspace = true
cw20.workspace = true
cosmos-sdk-proto = { workspace = true }
prost = { workspace = true }
