[package]
name = "lst_staking_hub"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
lst_common = { path = "../lst_common", default-features = false }

cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true, features = ["staking"] }
cosmos-sdk-proto = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw20-base = { workspace = true }
cw20 = { workspace = true }
cosmos-sdk-proto.workspace = true

[dev-dependencies]
cw-multi-test = { workspace = true }
