[package]
name = "lst_staking_hub"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
lst_common = { path = "../../packages/lst_common", default-features = false }

cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true, features = ["staking"] }
cosmos-sdk-proto = { workspace = true }
cw-storage-plus = { workspace = true }
cw2 = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
cw20-base = { workspace = true }
cw20 = { workspace = true }

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
cw-multi-test = { workspace = true, features = ["staking", "cosmwasm_2_2"] }
lst_token = {workspace = true}
lst_validators_registry = {workspace = true}
lst_reward_dispatcher = {workspace = true}
