[package]
name = "lst_token"
edition.workspace = true
authors.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []
testing = []

[dependencies]
lst_common = { path = "../../packages/lst_common" }

cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true
cw2.workspace = true
cw-storage-plus.workspace = true
thiserror.workspace = true

cw20.workspace = true

cw20-base = { workspace = true, features = ["library"] }
cw-multi-test = { workspace = true }
serde = { workspace = true }
