[package]
name = "lst_validators_registry"
edition = "2024"
authors.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
default = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["staking"] }
cosmwasm-schema.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
thiserror.workspace = true

lst_common = { path = "../lst_common" }
