[package]
name = "lst_validators_registry"
edition.workspace = true
authors.workspace = true
repository.workspace = true
version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
default = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["staking"] }
cosmwasm-schema.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
schemars.workspace = true

lst_common = { path = "../../packages/lst_common" }

[target."cfg(not(target_arch = \"wasm32\"))".dependencies]
cw-multi-test = { workspace = true }
